[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "metaflow-orchestrator-kit"
version = "0.1.0"
description = "Development kit for building Metaflow orchestrator extensions"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
dependencies = ["metaflow", "pytest", "omegaconf"]

[project.optional-dependencies]
dev = ["pytest-xdist", "pytest-timeout", "pytest-cov"]

[project.scripts]
metaflow-orchestrator-scaffold = "metaflow_orchestrator_kit.scaffold.__main__:main"
metaflow-orchestrator-validate = "metaflow_orchestrator_kit.validate.__main__:main"
metaflow-orchestrator-test = "metaflow_orchestrator_kit.test.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["metaflow_orchestrator_kit*"]

[tool.pytest.ini_options]
markers = [
    "compliance: orchestrator compliance tests",
    "scheduler_only: tests that require a live scheduler (deployer mode only)",
    "basic: basic flow execution tests",
    "config: config/project decorator tests",
    "dag: DAG structure tests (branching, foreach, nested foreach)",
    "data_ux: data-layer UX tests",
]
